<resources>
    <string name="app_name">MabolaAPP</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_dash_board">DashBoard</string>
    <string name="title_games">Games</string>
    <string name="title_latest">Latest</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_standings">Standings</string>
    <string name="title_rules">Rules</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottomnavi">Bottomnavi</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
